Move margin to right side for inline radio/checkbox to fix alignment when vertical

--- a/scss/core/_forms.scss
+++ b/scss/core/_forms.scss
@@ -208,13 +208,10 @@ textarea.form-control {
 // Radios and checkboxes on same line
 .form-check-inline {
     display: inline-block;
+    margin-right: $form-check-inline-margin-x;
 
     .form-check-label {
         vertical-align: middle;
-    }
-
-    + .form-check-inline {
-        margin-left: $form-check-inline-margin-x;
     }
 }
 
